--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -175,6 +175,22 @@
               >Add Trade Data</a
             >
           </li> -->
+
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Analysis
+            </a>
+
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'analysis_forest' %}"> Forest Data Analysis </a>
+              </li>
+
+            </ul>
+
+
+          </li>
         </ul>
 
       </div>
