--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -112,6 +112,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_production_excel' %}">Upload Production Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_activity_excel' %}">Upload Activity Data</a>
+              </li>
             </ul>
           </li>
           {% endif %}
