--- a/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
+++ b/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
@@ -1,5 +1,4 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -10,17 +9,7 @@
   >
     Filters
   </button>
-</div>
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
+
 
 <div class="bg-light mt-3">
   <div class="collapse shadow rounded-2 " id="collapseFilter">
@@ -147,8 +136,11 @@
   </div>
 </div>
 
-<div class="fs-4 fw-bold text-center">Disaster Data</div>
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'disaster_table' %}">Disaster Data</a>
 
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -197,16 +189,19 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Disaster_id
+                Disaster Code
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Human_Loss
+              Disaster Type
+          </th>
+            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Human Loss
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Animal_Loss
+                Animal Loss
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-              Physical_Properties_Loss_In_USD
+              Physical Properties Loss In USD
           </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
@@ -227,7 +222,9 @@
             </td>
             <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Disaster_Code }}</td>
+            <td>{{ record.Disaster_Code.Code }}</td>
+            <td>{{ record.Disaster_Code.Disaster_Type }}</td>
+
             <td>{{ record.Human_Loss }}</td>
             <td>{{ record.Animal_Loss }}</td>
             <td>{{ record.Physical_Properties_Loss_In_USD}}</td>
