--- a/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
+++ b/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
+
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,17 +11,8 @@
   >
     Filters
   </button>
-</div>
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
+
+
 
 <div class="bg-light mt-3">
 
@@ -116,8 +107,10 @@
     </div>
   </div>
 
-  <div class="fs-4 fw-bold text-center">Health Disease Data</div>
-
+  <div class="d-flex justify-content-center">
+    <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+        href="{% url 'health_disease_table' %}">Health Disease Data</a>
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -166,13 +159,16 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Disease_Code
+                Disease Code
             </th>
+            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+              Disease Type
+          </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Unit
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                No_Of_Case
+                No Of Case
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
@@ -193,7 +189,8 @@
             </td>
             <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Disease_Code }}</td>
+            <td>{{ record.Disease_Code.Code }}</td>
+            <td>{{ record.Disease_Code.Disease_Type }}</td>
             <td>{{ record.Unit }}</td>
             <td>{{ record.Number_Of_Case }}</td>
             <td class="d-flex">
