--- a/databank/general_data/templates/general_data/housing_templates/housing_table.html
+++ b/databank/general_data/templates/general_data/housing_templates/housing_table.html
@@ -1,5 +1,4 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,17 +10,6 @@
   >
     Filters
   </button>
-</div>
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
 
 <div class="bg-light mt-3">
 
@@ -32,7 +20,7 @@
           <div class="col-md-3">
             <label for="date_minimum">Calender Date Minimum</label>
             <input
-              type="date"
+              type="number"
               class="form-control"
               id="date_minimum"
               name="date_min"
@@ -41,7 +29,7 @@
           <div class="col-md-3">
             <label for="date_maximum">Calender Date Maximum</label>
             <input
-              type="date"
+              type="number"
               class="form-control"
               id="date_maximum"
               name="date_max"
@@ -62,7 +50,7 @@
             </select>
           </div>
           <div class="form-group col-md-3">
-            <label for="house_code">Mine Code-Name of the mine </label>
+            <label for="house_code">Mine Code</label>
             <select id="house_code" class="form-control" name="house_code">
               <option selected>--</option>
               {% for house_code in house_codes %}
@@ -114,8 +102,10 @@
       </div>
     </div>
   </div>
-  <div class="fs-4 fw-bold text-center">Housing Data</div>
-
+  <div class="d-flex justify-content-center">
+    <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+        href="{% url 'housing_table' %}">Housing Data</a>
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -164,10 +154,10 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                House_Code
+                House Code
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                House_Type
+                House Type
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 City
@@ -194,7 +184,7 @@
             </td>
             <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.House_Code }}</td>
+            <td>{{ record.House_Code.Code }}</td>
             <td>{{ record.House_Code.House_Type }}</td>
             <td>{{ record.City }}</td>
             <td>{{ record.Number }}</td>
